[#166] refactor: CarLog 도메인 코드 리팩토링
- store, reader 분리
- CarLogFactory 구현