@@ -5,12 +5,14 @@ import com.wherecar.rest.carlog.application.dto.CarLogDetailResponse;
 import com.wherecar.rest.carlog.application.dto.CarLogsResponse;
 import com.wherecar.rest.carlog.application.dto.CarLogsUpdateRequest;
 import com.wherecar.rest.carlog.application.dto.MonthlyMileage;
+import com.wherecar.rest.carlog.domain.CarLogFactory;
+import com.wherecar.rest.carlog.infrastructure.CarLogReader;
 import com.wherecar.rest.carlog.infrastructure.CarLogRepository;
 import com.wherecar.rest.car.infrastructure.CarRepository;
+import com.wherecar.rest.carlog.infrastructure.CarLogStore;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -29,8 +31,9 @@ public class CarLogServiceImpl implements CarLogService {
 
     private final CarRepository carRepository;
     private final CarLogRepository carLogRepository;
-
-    private static final Integer METER_TO_KILOMETER = 1000;
+    private final CarLogReader carLogReader;
+    private final CarLogStore carLogStore;
+    private final CarLogFactory carLogFactory;
 
     //차량 목록 조회(필터 추가)
     @Override
@@ -43,73 +46,39 @@ public class CarLogServiceImpl implements CarLogService {
             int page,
             int size
     ) {
-        PageRequest pageRequest = PageRequest.of(page, size);
 
-        Page<CarLog> logs = carLogRepository.findCarLogsFiltered(companyId, mdn, startTime, endTime, pageRequest);
+        Page<CarLog> carLogs = carLogReader.getCarLogsFiltered(companyId, mdn, startTime, endTime, page, size);
+        return carLogFactory.toCarLogsResponsePage(carLogs);
 
-        return logs.map(carLog -> CarLogsResponse.builder()
-                .logId(carLog.getId())
-                .mdn(carLog.getMdn())
-                .onTime(carLog.getOnTime())
-                .offTime(carLog.getOffTime())
-                .onMileage(carLog.getOnMileage())
-                .offMileage(carLog.getOffMileage())
-                .driver(carLog.getDriver())
-                .driveType(carLog.getDriveType())
-                .description(carLog.getDescription())
-                .build()
-        );
     }
-
-
-
 
     //운행일지 상세 정보
     @Override
     @Transactional(readOnly = true)
-    public CarLogDetailResponse getCarLogsDetails(Long logId) {
+    public CarLogDetailResponse getCarLogDetails(Long carLogId) {
 
-        CarLog carLog = carLogRepository.findById(logId).orElseThrow(() -> new RuntimeException("해당 차량의 일지를 찾을 수 없습니다."));
-
-        return CarLogDetailResponse.builder()
-                .logId(carLog.getId())
-                .onTime(carLog.getOnTime())
-                .offTime(carLog.getOffTime())
-                .onMileage(carLog.getOnMileage())
-                .offMileage(carLog.getOffMileage())
-                .totalMileage((carLog.getOffMileage() - carLog.getOnMileage()) / METER_TO_KILOMETER)
-                .driveType(carLog.getDriveType())
-                .description(carLog.getDescription())
-                .driver(carLog.getDriver())
-                .build();
+        CarLog carLog = carLogReader.getCarLogById(carLogId);
+        return carLogFactory.toCarLogDetailResponse(carLog);
 
     }
 
     //운행일지 상세 정보 수정
     @Override
-    public void updateCarLogDetails(Long id, CarLogsUpdateRequest carLogsUpdateRequest) {
+    public void updateCarLogDetails(Long carLogId, CarLogsUpdateRequest carLogsUpdateRequest) {
 
-        CarLog carLog = carLogRepository.findById(id).orElseThrow(() -> new RuntimeException("해당 차량의 일지를 찾을 없습니다."));
-
-        carLog.changeDescription(carLogsUpdateRequest.getDescription());
-        carLog.changeDriver(carLogsUpdateRequest.getDriver());
-        carLog.changeDriveType(carLogsUpdateRequest.getDriveType());
-
-        carLogRepository.save(carLog);
+        CarLog carLog = carLogReader.getCarLogById(carLogId);
+        carLog.updateCarLog(carLogsUpdateRequest);
+        carLogStore.store(carLog);
 
     }
 
     //운행일지 상세 정보 삭제
     @Override
-    public void deleteCarLogDetails(Long id) {
-
-        if (!carLogRepository.existsById(id)) {
-            throw new RuntimeException("해당 차량의 일지를 찾을 없습니다.");
-        }
-        carLogRepository.deleteById(id);
-
+    public void deleteCarLogDetails(Long carLogId) {
+        carLogStore.delete(carLogId);
     }
 
+    //Todo: 대시보드 코드 추후 별도로 리팩토링 진행
     @Override
     public CarLogsResponse getAllCarLogsStatics(Long companyId) {
 
@@ -129,7 +98,7 @@ public class CarLogServiceImpl implements CarLogService {
                             && onTime.getYear() == currentYear
                             && onTime.getMonthValue() == currentMonth;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // 로그 건수
         long count = currentMonthLogs.size();
